# tablet-stuff

./: .gitignore  .gitmodules  README.md
hardware/: mounting_bracket_test.fcstd  mounting_bracket_test.fcstd1
hardware/busboard/: #auto_saved_files#  busboard.kicad_prl  busboard.kicad_pro  busboard.kicad_sch  fp-info-cache
os_software/: .gitignore  Makefile  boot.S  kernel.c  kernel8.elf  kernel8.img  link.ld  paddos.elf
pages/: index.html
pages/css/: main.css
research/animation/: .gitignore  CMakeLists.txt  README.md
research/font/: .gitignore  CMakeLists.txt  README.md
research/font/include/: engine.h  font.h  util.h
research/font/src/: main.cpp
research/font/src/engine/: drawsys.cpp  engine.cpp
research/font/src/font/: font_util_fns.cpp  load_font.cpp
research/graphs/: CMakeLists.txt
software/: .gitignore  CMakeLists.txt  README.md
software/.cache/clangd/index/: app.h.62BE4903F0E673DF.idx  app.h.FF1FE994E1009F5E.idx  main.cpp.15637B288E0F1478.idx  main.cpp.7F628ED80A6EF028.idx
software/include/: algo.h  animation.h  app.h  eventsys.h  font.h  object.h  pda.h  rendersys.h  scene_manager.h  soareds.h
software/include/animation/: animation.h
software/include/component/: component.h  modal.h
software/include/engine/: drawsys.h  engine.h  event.h
software/include/logging/: logger.h
software/include/modules/: gpio_mod.h  ttf_mod.h
software/include/network/: http.h
software/include/objects/: animation.h  font.h  inputwidget.h  scene.h  script.h  widget.h
software/include/themes/: soareds.h
software/include/util/: http.h  logger.h  util.h
software/resources/: format_template.scn  scene_home.yaml  test_scene.json  test_script.lua
software/resources/soareds/: theme.json
software/resources/soareds/scenes/: home.json
software/scripts/: build_external.sh
software/scripts/cmake/: FindLibCURL.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  Findjsoncpp.cmake
software/scripts/python/: svg_to_json.py
software/src/: app.cpp  eventsys.cpp  main.cpp
software/src/algo/: basic.cpp  winding_number.cpp
software/src/engine/: drawsys.cpp  engine.cpp  event.cpp
software/src/engine/animation/: AnimationTrack.cpp
software/src/engine/scene/: load_scene.cpp  scene.cpp
software/src/font/: font_file.cpp  render_text.cpp
software/src/objects/: object.cpp  scene.cpp
software/src/objects/components/: BaseComponent.cpp  ShapeComponent.cpp
software/src/rendersys/: drawing.cpp  drawsys.cpp  rendersys.cpp  subsystem.cpp
software/src/scene_management/: load_scene.cpp  scene_manager.cpp
software/src/soareds/: common_render.cpp  standby.cpp
software/src/system/: common_render.cpp
software/src/test/: test_scene.cpp
software/src/ttf/: font_manager.cpp
software/src/util/: conversions.cpp  serialize.cpp  validation.cpp
software/src/util/logger/: logger.cpp
software/src/widgets/: BaseWidget.cpp  CircleWidget.cpp  EllipseWidget.cpp  LineWidget.cpp  PointWidget.cpp  PolylineWidget.cpp  RectangleWidget.cpp  TextWidget.cpp
software/toolchain/: aarch64_linux_gnu.cmake
